Build Stamp: BUILDTIME

Change Log:
----------------------------------------------------------------------

1.0.3.5
----------------------------------------------------------------------
- Added: Added a filter "ms_rule_url_model_exception_rule" to set exception for URL restriction addon
- Improved: Remove Paypal "Ship to my billing address" option from express gateway as this is digital product
- Fixed: Fatal error - Uncaught Error: [] operator not supported for strings
- Fixed: Post protection option could not be changed from post edit screen
- Fixed: Issue with MS_PAYPAL_TRIAL_SUBSCRIPTION when trial is enabled, members account was not activated
- Fixed: Selection sliders were not working in some cases
- Fixed: Second attribute could not be created
- Fixed: New members not being added by M2 2Checkout Gateway
- Fixed: Duplicate Content Protection Message when custom message is enabled
- Fixed: Images are not getting load if media protection is enabled
- Fixed: Applying Membership 2 Coupon is giving fatal error in PHP 7.1.3
- Fixed: Membership was not showing in account page



- Fixed: Resolved some notices




1.0.3.4
----------------------------------------------------------------------
- Added: WP reCaptcha notices
- Added: Adding default column in Member table
- Added: Adding default column in Billing table
- Added: Hierarchical category in protection rule - category protection addon
- Added: New Custom Logo in stripe checkout
- Improved: Paypal Ship option is supressed from Paypal page
- Fixed: MS_PROTECT_NETWORK still adding membership menu in subsite.
- Fixed: BuddyPress protection rule for "All BP pages" is now working.
- Fixed: Fatal error: Undefined function is_multisie()
- Fixed: Remove/hide option in the login link in shortcode
- Fixed: show_membership attribute fixed in account shortcode
- Fixed: Display name was not saving in membership form
- Fixed: Some post content get protected when category protection is enabled